--- a/index.html
+++ b/index.html
@@ -4,21 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animate</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="main">
-      <div id="nav">
-        <div id="nLeft">
-          <a href="#">Home</a>
-          <a href="#">Pricing</a>
-          <a href="#">Products</a>
+      <section id="home">
+        <div id="nav">
+          <div id="nLeft">
+            <a href="#">Home</a>
+            <a href="#">Pricing</a>
+            <a href="#">Products</a>
+          </div>
+          <a id="nCenter" href="#">YoRu</a>
+          <div id="nRight">
+            <a href="#">Our Journey</a>
+          </div>
         </div>
-        <a id="nCenter" href="#">YoRu</a>
-        <div id="nRight">
-          <a href="#">Our Journey</a>
+        <div id="hero">
+          <div id="sustain">
+            <h5>01.</h5>
+            <h2>Sustainability</h2>
+            <p>
+              Committed to sustainability, eco-friendly choices for a tomorrow.
+            </p>
+            <div id="susImageWrapper">
+              <img src="./images/pinkgreenplant.jpg" alt="" />
+            </div>
+          </div>
+          <div id="hCenter">
+            <div id="headings">
+              <h1>Ephemeral</h1>
+              <h1>Equilibrium.</h1>
+            </div>
+            <div id="image-text">
+              <img src="./images/pinkplant.jpg" alt="" />
+              <p>
+                Committed to sustainability, eco-friendly choices for a better
+                tomorrow.
+              </p>
+            </div>
+          </div>
+          <div id="visit">
+            <div id="circleV"><i class="ri-arrow-down-line"></i></div>
+            <h3>Visit Our Gallery</h3>
+          </div>
         </div>
-      </div>
+        <div id="motive"></div>
+      </section>
     </div>
   </body>
 </html>
