--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
             <h3>Visit Our Gallery</h3>
           </div>
         </div>
-        <div id="motive"></div>
+        <div id="motive">
+          <h3>Our Motive</h3>
+          <p>
+            My brand embodies innovation and quality, seamlessly blending modern
+            aesthetics with timeless functionality.
+            <span id="one"></span>Committed to excellence, we prioritize
+            sustainability and customer satisfaction. Our products are crafted
+            to inspire, <span id="two"></span> offering a unique blend of style
+            and <span id="three"></span>practicality that elevates everyday
+            experiences . Discover the difference with our brand.
+          </p>
+        </div>
       </section>
     </div>
   </body>
