--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
             experiences . Discover the difference with our brand.
           </p>
         </div>
+        <div id="pictures">
+          <div id="firstPic">
+            <div id="picImg">
+              <img src="./images/sea.jpg" alt="" />
+            </div>
+            <div id="firstData">
+              <h1>Synergy.</h1>
+              <p>
+                Committed to sustainability, eco-friendly choices for a better
+                tomorrow.
+              </p>
+            </div>
+          </div>
+          <div id="secondPic">
+            <div id="picImg">
+              <img src="./images/cloud.jpg" alt="" />
+            </div>
+            <div id="secData">
+              <h1>Harmony.</h1>
+              <p>
+                Committed to sustainability, eco-friendly choices for a better
+                tomorrow.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
