--- a/index.html
+++ b/index.html
@@ -91,6 +91,28 @@
             </div>
           </div>
         </div>
+        <div id="banner">
+          <div id="bImg">
+            <img src="./images/bottle.jpg" alt="" />
+          </div>
+          <div id="bText">
+            <h1>
+              Biodegradable <br />
+              Packaging
+            </h1>
+            <p>
+              Committed to sustainability, eco-friendly choices for a better
+              tomorrow.
+            </p>
+          </div>
+        </div>
+        <div id="future">
+          <video src="./back.mp4" loop muted autoplay></video>
+          <div id="ftext">
+            <h1>think of future.</h1>
+            <button>join the movement</button>
+          </div>
+        </div>
       </section>
     </div>
   </body>
